Correction du contraste sur les boutons du carousel

--- a/assets/essential.css
+++ b/assets/essential.css
@@ -207,11 +207,10 @@ button,
   justify-content: center;
   width: 15%;
   padding: 0;
-  color: #fff;
   text-align: center;
   background: none;
   border: 0;
-  opacity: 0.5;
+  opacity: 1;
 }
 .carousel-control-prev {
   left: 0;
@@ -227,7 +226,10 @@ button,
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 100% 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
+
+
 .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
 }
